changed mistake in docker-compose & updated travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,10 @@ script:
 deploy:
   provide: elasticbeanstalk
   region: "us-east-1"
-  app: "docker-react-course"
-  env: "Dockerreactcourse-env"
+  app: "docker-react"
+  env: "Dockerreact-env"
   bucket_name: "elasticbeanstalk-us-east-1-974379285729"
-  bucket_path: "docker-react-course"
+  bucket_path: "docker-react"
   on:
     branch: master
   access_key_id: $AWS_ACCESS_KEY
